@@ -43,6 +43,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Re-label "StreamField blocks" option in block picker to "Blocks" (Thibaud Colas)
  * Re-implement styleguide icons list as an auto-generated sequence of tables (Thibaud Colas)
  * Switch styleguide navigation to use panel components and minimap (Thibaud Colas)
+ * Explicitly specify `MenuItem.name` for Snippets, Reports, and Settings menu items (Sage Abdullah)
 
 ### Bug fixes
 
